# lv

./: README.md
docs/: ARCHITECTURE.md  NAMING_CONVENTIONS.md
examples/: CMakeLists.txt  animation.cpp  canvas_draw.cpp  chart.cpp  form.cpp  grid_demo.cpp  navigation.cpp  settings.cpp  translation_demo.cpp
include/lv/core/: color.hpp  object.hpp  style.hpp
include/lv/draw/: draw.hpp  draw_buf.hpp  draw_task.hpp
include/lv/libs/: barcode.hpp  qrcode.hpp
include/lv/widgets/: box.hpp  button.hpp  canvas.hpp  image.hpp
